# pythonscad-gridfinity

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_basic.py
.github/workflows/: commitlint.yml  pre-commit.yml  release-please.yml
examples/: basic_baseplate.py  basic_bin.py  vase_bin.py
pythonscad_gridfinity/: __init__.py  baseplate.py  bin.py  helpers.py  holes.py  spec.py  vase.py
